--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,3 +27,9 @@ h2 {
   border: 3px solid #EEE;
   border-radius: 8px;
 }
+
+.review_container {
+  background-color: #fff;
+  padding: 30px;
+  border: 1px solid #ddd;
+}
