--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,9 +1,19 @@
 <%= form_for @review do |f| %>
-  <div class="form-group">
-    <%= f.text_field :content, required: true, class:"form-control", placeholder:"Enter your review here ..." %>
-    <%= f.hidden_field :space_listing_id, value:"#{@space_listing.id}" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit f.object.new_record? ? "Post Review" : "Update Review", class:"btn btn-success btn-sm" %>
-  </div>
+<div class="form-group">
+  <%= f.text_area :content, required: true, class:"form-control", placeholder:"Enter your review here ..." %>
+  <%= f.hidden_field :space_listing_id, value:"#{@space_listing.id}" %>
+  <fieldset class="starability-grow">
+    <%= f.radio_button :score, 5, id:"growing-rate5", name:"score"%>
+    <label for="growing-rate5" title="Amazing">5 stars</label>
+    <%= f.radio_button :score, 4, id:"growing-rate4", name:"score"%>
+    <label for="growing-rate4" title="Very good">4 stars</label>
+    <%= f.radio_button :score, 3, id:"growing-rate3", name:"score"%>
+    <label for="growing-rate3" title="Average">3 stars</label>
+    <%= f.radio_button :score, 2, id:"growing-rate2", name:"score"%>
+    <label for="growing-rate2" title="Not good">2 stars</label>
+    <%= f.radio_button :score, 2, id:"growing-rate1", name:"score"%>
+    <label for="growing-rate1" title="Terrible">1 star</label>
+  </fieldset>
+  <%= f.submit f.object.new_record? ? "Post Review" : "Update Review", class:"btn btn-success btn-md" %>
+</div>
 <% end %>
