--- a/app/views/bookings/your_rented_spaces.html.erb
+++ b/app/views/bookings/your_rented_spaces.html.erb
@@ -4,11 +4,11 @@
   <div ng-controller="bookingCtrl" ng-init="your_rented_spaces_setup()">
     <div class="row">
       <div class="col-md-3">
-        <ul>
+        <ul class="nav nav-pills nav-stacked">
           <li>
             <%= link_to "Your Bookings", your_bookings_path %>
           </li>
-          <li>
+          <li class="active">
             <%= link_to "Your Rented Spaces", your_rented_spaces_path %>
           </li>
         </ul>
@@ -21,14 +21,12 @@
             <th><a href="#" ng-click="toggleOrder('move_in')">Move In</a></th>
             <th><a href="#" ng-click="toggleOrder('move_out')">Move Out</a></th>
             <th><a href="#" ng-click="toggleOrder('price')">Price</a></th>
-            <th><a href="#" ng-click="toggleOrder('status')">Status</a></th>
             <th><a href="#" ng-click="toggleOrder('host')">Space Host</a></th>
           </tr>
           <tr ng-repeat="rented_space in rentedSpaces | orderBy: orderAttribute:descending">
             <td>{{ rented_space.move_in }}</td>
             <td>{{ rented_space.move_out }}</td>
             <td>{{ rented_space.price }}</td>
-            <td>{{ rented_space.approved_status }}</td>
             <td>{{ rented_space.host }}</td>
           </tr>
         </table>
