--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  *= require font-awesome
  *= require style.min
  *= require responsive.min
+ *= require fullcalendar
+ *= require fullcalendar.print
  *= require_tree .
  *= require_self
  */
