--- a/app/views/bookings/your_rented_spaces.html.erb
+++ b/app/views/bookings/your_rented_spaces.html.erb
@@ -15,6 +15,8 @@
       </div>
       <div class="col-md-9">
         <h1>Your Rented Spaces</h1>
+        <div id='rented_calendar'></div>
+        <br>
         <% if @rented_spaces %>
         <table class="table">
           <tr>
