Added animation on the card form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  *= require responsive.min
  *= require fullcalendar
  *= require fullcalendar.print
+ *= require card
  *= require_tree .
  *= require_self
  */
