--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,27 +1,27 @@
 h2 {
-    display: block;
-    margin-bottom: 20px;
-    font-size: 28px;
-    line-height: 32px;
-    font-weight: 600;
-    text-align: center;
-    text-transform: uppercase;
+  display: block;
+  margin-bottom: 20px;
+  font-size: 28px;
+  line-height: 32px;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.card {
-  background: #fff;
-  border-radius: 2px;
-  height: 200px;
-}
-
-.card-1 {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-.card-1:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
+// .card {
+//   background: #fff;
+//   border-radius: 2px;
+//   height: 200px;
+// }
+//
+// .card-1 {
+//   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+//   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+// }
+//
+// .card-1:hover {
+//   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+// }
 
 .input-group-addon {
   border: 3px solid #EEE;
@@ -52,4 +52,10 @@ h2 {
 
 .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   background-color: #54724B;
+}
+
+.demo-container {
+  width: 100%;
+  max-width: 350px;
+  margin: 50px auto;
 }
