--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,20 +3,20 @@
     <div class="row">
       <div class="inner_container">
         <h2>Booking Space</h2>
-        <%= form_for @booking do |f| %>
+        <%= form_tag bookings_path, id:"payment-form", class:"form-container active" do |f| %>
         <div class="row center">
           <div class="col-md-6 col-xs-6">
-            <%= f.label :move_in, "Move In" %>
+            <%= label_tag :move_in, "Move In" %>
             <div class="input-group date mg-check-in focus">
               <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-              <%= f.text_field :move_in, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+              <%= text_field_tag :move_in, nil, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
             </div>
           </div>
           <div class="col-md-6 col-xs-6">
-            <%= f.label :move_out, "Move Out" %>
+            <%= label_tag :move_out, "Move Out" %>
             <div class="input-group date mg-check-in focus">
               <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-              <%= f.text_field :move_out, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+              <%= text_field_tag :move_out, nil, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
             </div>
           </div>
         </div>
@@ -29,21 +29,39 @@
               <span class="input-group-addon">$</span>
               <input id="day_rent" class="form-control" disabled="true" value="<%= number_with_precision @space_listing.day_rent, :precision => 2 %>" ></input>
             </div>
-            <%= f.hidden_field :space_listing_id, value:"#{@space_listing.id}" %>
+            <%= hidden_field_tag :space_listing_id, "#{@space_listing.id}" %>
+            <%= hidden_field_tag :stripeEmail, "#{current_user.email}" %>
             <% end %>
           </div>
           <div class="col-md-6 col-xs-6">
-            <%= f.label :price, "Price: " %>
+            <%= label_tag :price, "Price: " %>
             <div class="input-group">
               <span class="input-group-addon">$</span>
-              <%= f.text_field :price, disabled:false, class:"form-control", 'aria-label':'Amount (to the nearest dollar)' %>
+              <%= text_field_tag :price, nil, readonly:true, class:"form-control", 'aria-label':'Amount (to the nearest dollar)' %>
             </div>
           </div>
         </div>
-        <br>
+        <div class="demo-container">
+          <div class="card-wrapper"></div>
+          <div class="form-group">
+            <%= label_tag :card_number, "Credit Card Number" %>
+            <%= text_field_tag :card_number, nil, name: "number", data: {stripe: "number"}, value:"4242 4242 4242 4242", class:"form-control" %>
+          </div>
+          <input type="hidden" customer_name name="name", value="<%= current_user.full_name %>">
+          <div class="form-group">
+            <%= label_tag :card_code, "Security Code on Card (CVC)" %>
+            <%= text_field_tag :card_code, nil, name: "cvc", data: {stripe: "cvc"}, value:"123", class:"form-control" %>
+          </div>
+          <div class="form-group">
+            <%= label_tag :card_month, "Card Expiration" %>
+            <%= text_field_tag :card_month, nil, name: "expiry", data: {stripe: "exp"}, value:"12 / 17", class:"form-control" %>
+          </div>
+          <div class="card-errors">
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-12 col-xs-6">
-            <%= f.submit "Book Now", class:"btn btn-success btn-block" %>
+            <%= submit_tag "Pay Now", id: "pay_now", class:"btn btn-success btn-block" %>
           </div>
         </div>
         <br>
