--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 
   <%= render "shared/footer" %>
 </body>
-<script type="text/javascript">
+<script>
   Stripe.setPublishableKey('<%= ENV['PUBLISHABLE_KEY'] %>');
 </script>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
