--- a/app/views/shared/_autocomplete.html.erb
+++ b/app/views/shared/_autocomplete.html.erb
@@ -1,10 +1,10 @@
-<div class="col-md-8 col-md-offset-2">
+<div class="col-md-8 col-md-offset-2 landing">
   <h2>Where do you need space? </h2>
   <div class="form-group">
     <div class="input-group">
       <input id="searchTextField" type="text" class="form-control" placeholder="Enter your Zipcode" autocomplete="off">
       <span class="input-group-btn">
-        <button class="btn-sm btn-danger">Search</button>
+        <button class="btn-sm btn-danger landing-search">Search</button>
       </span>
     </div>
   </div>
