--- a/app/views/shared/_service.html.erb
+++ b/app/views/shared/_service.html.erb
@@ -1,5 +1,5 @@
 <div id="service">
-  <div class="container">
+  <div class="container services">
     <div class="row">
       <div class="col-md-12">
         <h2>BetterSpace Features<small>Why pay for a dedicated storage facility?</small></h2>
