--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -35,9 +35,62 @@ function initializeMap() {
     <% end %>
   ];
   var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 10,
+    zoom: 12,
     center: new google.maps.LatLng(<%= @space_listings.first.latitude %>, <%= @space_listings.first.longitude %>),
-    mapTypeId: google.maps.MapTypeId.ROADMAP
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    styles: [
+      {
+        "featureType": "administrative",
+        "elementType": "labels.text.fill",
+        "stylers": [
+            { "color": "#444444" }
+        ]
+      },
+      {
+        "featureType": "landscape",
+        "elementType": "all",
+        "stylers": [
+            { "color": "#f2f2f2" }
+        ]
+      },
+      {
+        "featureType": "poi",
+        "elementType": "all",
+        "stylers": [
+            { "visibility": "off" }
+          ]
+      },
+      {
+        "featureType": "road",
+        "elementType": "all",
+        "stylers": [
+            { "saturation": -100 },
+            { "lightness": 45 }
+        ]
+      },
+      {
+        "featureType": "road.highway",
+        "elementType": "all",
+        "stylers": [
+            { "visibility": "simplified" }
+        ]
+      },
+      {
+        "featureType": "road.arterial",
+        "elementType": "labels.icon",
+        "stylers": [
+            { "visibility": "off" }
+        ]
+      },
+      {
+        "featureType": "water",
+        "elementType": "all",
+        "stylers": [
+            { "color": "#689b61" },
+            { "visibility": "on" }
+        ]
+      }
+    ]
   });
 
   var infowindow = new google.maps.InfoWindow();
