--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -211,7 +211,60 @@
 
             var map = new google.maps.Map(document.getElementById('map-canvas2'), {
               zoom: 14,
-              center: place
+              center: place,
+              styles: [
+                {
+                  "featureType": "administrative",
+                  "elementType": "labels.text.fill",
+                  "stylers": [
+                      { "color": "#444444" }
+                  ]
+                },
+                {
+                  "featureType": "landscape",
+                  "elementType": "all",
+                  "stylers": [
+                      { "color": "#f2f2f2" }
+                  ]
+                },
+                {
+                  "featureType": "poi",
+                  "elementType": "all",
+                  "stylers": [
+                      { "visibility": "off" }
+                    ]
+                },
+                {
+                  "featureType": "road",
+                  "elementType": "all",
+                  "stylers": [
+                      { "saturation": -100 },
+                      { "lightness": 45 }
+                  ]
+                },
+                {
+                  "featureType": "road.highway",
+                  "elementType": "all",
+                  "stylers": [
+                      { "visibility": "simplified" }
+                  ]
+                },
+                {
+                  "featureType": "road.arterial",
+                  "elementType": "labels.icon",
+                  "stylers": [
+                      { "visibility": "off" }
+                  ]
+                },
+                {
+                  "featureType": "water",
+                  "elementType": "all",
+                  "stylers": [
+                      { "color": "#689b61" },
+                      { "visibility": "on" }
+                  ]
+                }
+              ]
             });
 
             var panorama = new google.maps.StreetViewPanorama( document.getElementById('pano'), {
