--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,21 +20,24 @@
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listings <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "View Listings", list_view_path %></li>
-                <li><%= link_to "Map of Listings", space_listings_path %></li>
-                <li><%= link_to "Add Listing", new_space_listing_path %></li>
-                <li><%= link_to "Favorite Listings", favorites_path %></li>
+                <li><%= link_to "List View of Listings", list_view_path %></li>
+                <li><%= link_to "Map View of Listings", space_listings_path %></li>
+                <li><%= link_to "Add New Listing", new_space_listing_path %></li>
               </ul>
           </li>
           <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookings <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Your Bookings", your_bookings_path %></li>
-                <li><%= link_to "Your Rented Spaces", your_rented_spaces_path %></li>
-              </ul>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%= gravatar_tag current_user.email, size: 20 %>&nbsp;
+              <%= current_user.full_name %> <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Your Bookings", your_bookings_path %></li>
+              <li><%= link_to "Your Rented Spaces", your_rented_spaces_path %></li>
+              <li><%= link_to "Your Favorite Listings", favorites_path %></li>
+              <li><%= link_to 'Settings', edit_user_registration_path %></li>
+            </ul>
+            <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
           </li>
-          <li><%= link_to 'Settings', edit_user_registration_path %></li>
-          <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path, :class => "signin" %></li>
           <li><%= link_to 'Sign up', new_user_registration_path, :class => "signup" %></li>
