--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -6,18 +6,25 @@
     <div class="row">
       <div class="col-md-12">
         <div class="heading-title heading-title-alt">
-          <h3>Space Listings</h3>
+          <h4>Map View of Space Listings</h3>
         </div>
       </div>
     </div>
 
-<div class="col-md-4 col-sm-4 col-xs-3">
-  <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
-  <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
-</div>
+    <!-- begin:sorting -->
+    <div class="row sort">
+      <div class="col-md-5 col-sm-5 col-xs-5">
+        <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
+        <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
+      </div>
+      <div class="col-md-7 col-sm-7 col-xs-7">
+      </div>
+    </div>
+    <!-- end:sorting -->
 
 <div id="map"></div>
 </div>
+  <%= render "shared/sidebar" %>
 <!-- end:article -->
 </div>
 <script async defer
