--- a/app/assets/stylesheets/space_listings.scss
+++ b/app/assets/stylesheets/space_listings.scss
@@ -14,7 +14,11 @@ html, body {
 #map-canvas2, #pano {
   float: left;
   height: 300px;
-  width: 45%;
+  width: 50%;
+}
+
+.gm-iv-address {
+  height: 80px !important;
 }
 
 .btn-file {
