--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,13 +16,11 @@
       <!-- break -->
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="widget">
-          <h3>Top Space Listed</h3>
+          <h3>Recent Listed</h3>
           <ul class="list-unstyled">
-            <li><a href="#">Apartments</a></li>
-            <li><a href="#">Office</a></li>
-            <li><a href="#">Homes</a></li>
-            <li><a href="#">Parking</a></li>
-            <li><a href="#">Garage</a></li>
+            <% @recent_listings.each do |listing| %>
+            <li><a href="/space_listings/<%= listing.id %>"><%= listing.title.capitalize %></a></li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -31,24 +29,23 @@
         <div class="widget">
           <h3>Top Host Listed</h3>
           <ul class="list-unstyled">
-            <li><a href="#">Lorenso</a></li>
-            <li><a href="#">Bardiman</a></li>
-            <li><a href="#">Tarjono noto boto limo</a></li>
-            <li><a href="#">Surti</a></li>
-            <li><a href="#">Ngatinem</a></li>
+            <% @top_hosts.each do |host| %>
+            <li><a href="/user/<%= host.id %>"><%= host.full_name %></a></li>
+            <% end %>
           </ul>
         </div>
       </div>
       <!-- break -->
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="widget">
-          <h3>Features</h3>
+          <h3>LISTING TYPE</h3>
           <ul class="list-unstyled">
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">How To</a></li>
-            <li><a href="#">Market Trend</a></li>
-            <li><a href="#">Android App</a></li>
-            <li><a href="#">IOS App</a></li>
+            <ul class="list-check">
+              <li><a href="#">Garage</a></li>
+              <li><a href="#">House</a></li>
+              <li><a href="#">Outdoor</a></li>
+              <li><a href="#">Indoor</a></li>
+            </ul>
           </ul>
         </div>
       </div>
@@ -60,7 +57,6 @@
     <div class="row">
       <div class="col-md-12 copyright">
         <p>&copy; 2016 Better-Space All Right Reserved.</p>
-        <a href="#top" class="btn btn-success scroltop"><i class="fa fa-angle-up"></i></a>
       </div>
     </div>
     <!-- end:copyright -->
