--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -153,52 +153,7 @@
             <!--  end of reviews -->
           </div>
           <!-- end:article -->
-          <!-- begin:sidebar -->
-          <div class="col-md-3 col-md-pull-9 sidebar">
-            <div class="widget-white favorite">
-              <a href="#"><i class="fa fa-heart"></i> Add to favorite</a><br>
-              <%= link_to "Book This Space", "/bookings/new?space_listing_id=#{@space_listing.id}", class: "btn btn-success" %>
-            </div>
-
-            <!-- break -->
-            <div class="widget widget-sidebar widget-white">
-              <div class="widget-header">
-                <h3>Recent Property</h3>
-              </div>
-              <ul>
-                <li><a href="#">Luxury Villa</a></li>
-                <li><a href="#">Land In Central Park</a></li>
-                <li><a href="#">The Urban Life</a></li>
-                <li><a href="#">Luxury Office</a></li>
-              </ul>
-            </div>
-            <!-- break -->
-            <div class="widget widget-sidebar widget-white">
-              <div class="widget-header">
-                <h3>Property Type</h3>
-              </div>
-              <ul class="list-check">
-                <li><a href="#">Garage</a>&nbsp;(18)</li>
-                <li><a href="#">House</a>&nbsp;(31)</li>
-                <li><a href="#">Office</a>&nbsp;(52)</li>
-                <li><a href="#">Apartment</a>&nbsp;(8)</li>
-              </ul>
-            </div>
-            <!-- break -->
-            <div class="widget widget-sidebar widget-white">
-              <div class="widget-header">
-                <h3>Top Host</h3>
-              </div>
-              <ul>
-                <li><a href="#">John Doe</a></li>
-                <li><a href="#">Christoper Drew</a></li>
-                <li><a href="#">Jane Doe</a></li>
-                <li><a href="#">Jeny</a></li>
-              </ul>
-            </div>
-            <!-- break -->
-          </div>
-          <!-- end:sidebar -->
+          <%= render "shared/sidebar" %>
         </div>
         <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initMap">
