--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,123 +1,48 @@
 <div id="content">
   <div class="container">
-  <div class="row">
-  <!-- begin:article -->
-  <div class="col-md-9 col-md-push-3">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="heading-title heading-title-alt">
-          <h4>Map View of Space Listings</h3>
+    <div ng-app="app">
+      <div ng-controller="spaceListingCtrl" ng-init="setup()">
+        <div class="row">
+          <!-- begin:article -->
+          <div class="col-md-9 col-md-push-3">
+            <div class="row">
+              <div class="col-md-8">
+                <div class="heading-title heading-title-alt">
+                  <h4>Space Listings meeting the search criteria</h4>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <% if params[:map_view].nil? %>
+                <form class="form-inline" role="form">
+                  <label for="search">Search:</label>
+                  <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
+                </form>
+                <% end %>
+              </div>
+            </div>
+            <!-- begin:sorting -->
+            <div class="row sort">
+              <div class="col-md-4 col-sm-4 col-xs-4">
+                <a href="/space_listings?map_view=true" class="btn btn-default"><i class="fa fa-map"></i></a>
+                <a href="/space_listings" class="btn btn-success"><i class="fa fa-list"></i></a>
+              </div>
+              <div class="col-md-8 col-sm-8 col-xs-8">
+                <% if params[:map_view].nil? %>
+                <form class="form-inline" role="form">
+                  <span>Sort by : </span>
+                    <a href="#" ng-click="toggleOrder('day_rent', true);">Highest Rent</a>
+                    <a href="#" ng-click="toggleOrder('day_rent', false);">Lowest Rent</a>
+                </form>
+                <% end %>
+              </div>
+            </div>
+            <!-- end:sorting -->
+            <% if !params[:map_view].nil? %>
+            <%= render "multi_map" %>
+            <% else %>
+            <%= render "list_view" %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- begin:sorting -->
-    <div class="row sort">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
-        <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-      </div>
-    </div>
-    <!-- end:sorting -->
-
-<div id="map"></div>
-</div>
-  <%= render "shared/sidebar" %>
-<!-- end:article -->
-</div>
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initializeMap">
-</script>
-<script>
-function initializeMap() {
-  var locations = [
-    <% @space_listings.each_with_index do |listing, index| %>
-      <% if listing != @space_listings.last %>
-        ['<%= link_to listing.title, space_listing_path(listing) %><br/><%= listing.description %>', <%= listing.latitude %>, <%= listing.longitude %>, <%= index + 1 %>],
-      <% else %>
-        ['<%= link_to listing.title, space_listing_path(listing) %><br/><%= listing.description %>', <%= listing.latitude %>, <%= listing.longitude %>, <%= index + 1 %>]
-      <% end %>
-    <% end %>
-  ];
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 12,
-    center: new google.maps.LatLng(<%= @space_listings.first.latitude %>, <%= @space_listings.first.longitude %>),
-    mapTypeId: google.maps.MapTypeId.ROADMAP,
-    styles: [
-      {
-        "featureType": "administrative",
-        "elementType": "labels.text.fill",
-        "stylers": [
-            { "color": "#444444" }
-        ]
-      },
-      {
-        "featureType": "landscape",
-        "elementType": "all",
-        "stylers": [
-            { "color": "#f2f2f2" }
-        ]
-      },
-      {
-        "featureType": "poi",
-        "elementType": "all",
-        "stylers": [
-            { "visibility": "off" }
-          ]
-      },
-      {
-        "featureType": "road",
-        "elementType": "all",
-        "stylers": [
-            { "saturation": -100 },
-            { "lightness": 45 }
-        ]
-      },
-      {
-        "featureType": "road.highway",
-        "elementType": "all",
-        "stylers": [
-            { "visibility": "simplified" }
-        ]
-      },
-      {
-        "featureType": "road.arterial",
-        "elementType": "labels.icon",
-        "stylers": [
-            { "visibility": "off" }
-        ]
-      },
-      {
-        "featureType": "water",
-        "elementType": "all",
-        "stylers": [
-            { "color": "#689b61" },
-            { "visibility": "on" }
-        ]
-      }
-    ]
-  });
-
-  var infowindow = new google.maps.InfoWindow();
-
-  var marker, i;
-
-  for (i = 0; i < locations.length; i++) {
-    marker = new google.maps.Marker({
-      position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-      map: map
-    });
-
-    google.maps.event.addListener(marker, 'click', (function(marker, i) {
-      return function() {
-        infowindow.setContent(locations[i][0]);
-        infowindow.open(map, marker);
-      }
-    })(marker, i));
-  }
-}
-</script>
-</div>
-</div>
