--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-6 col-sm-12 col-xs-12 text-center">
       <h2>Space Renters</h2>
       <p>DISCOVER AVAILABLE STORAGE SPACES IN YOUR AREA.</p>
-      <a href="/list_view" class="btn btn-success btn-md">RENT NOW</a>
+      <a href="/space_listings" class="btn btn-success btn-md">RENT NOW</a>
     </div>
     <div class="col-md-6 col-sm-12 col-xs-12 text-center ">
       <h2>Space Host</h2>
