--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,13 @@
             <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
           </li>
         <% else %>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listings <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "List View of Listings", space_listings_path %></li>
+                <li><%= link_to "Map View of Listings", "/space_listings?map_view=true" %></li>
+              </ul>
+          </li>
           <li><%= link_to 'Sign in', new_user_session_path, :class => "signin" %></li>
           <li><%= link_to 'Sign up', new_user_registration_path, :class => "signup" %></li>
         <% end %>
