--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require bootstrap
  *= require bootstrap-datepicker3.min
  *= require font-awesome
- *= require style.min
+ *= require style
  *= require responsive.min
  *= require fullcalendar
  *= require fullcalendar.print
