--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,67 +1,71 @@
-<div class="inner_container">
-  <h2 class="pgTitle">Edit <%= resource_name.to_s.humanize %></h2>
+<div id="content">
+  <div class="container">
+    <div class="inner_container">
+      <h2 class="pgTitle">Edit <%= resource_name.to_s.humanize %></h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true , class: "form-control input-lg" %>
+      <div class="form-group">
+        <%= f.label :first_name %><br />
+        <%= f.text_field :first_name, autofocus: true , class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :last_name %><br />
+        <%= f.text_field :last_name, class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :phone_number %><br />
+        <%= f.phone_field :phone_number, class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :email, class:"text" %><br />
+        <%= f.email_field :email, class: "form-control input-lg" %>
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="form-group">
+        <%= f.label :password, class:"text" %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "off", class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation, class:"text" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :current_password, class:"text" %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "off", class: "form-control input-lg" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update", class: "btn btn-success" %>
+      </div>
+
+      <hr>
+
+      <%= gravatar_tag current_user.email, size: 100 %>
+      <%= link_to 'change avatar', 'http://en.gravatar.com' %>
+
+      <% end %>
+
+      <h3>Cancel my account</h3>
+
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+      <%= link_to "Back", :back %>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, class: "form-control input-lg" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :phone_number %><br />
-    <%= f.phone_field :phone_number, class: "form-control input-lg" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, class: "form-control input-lg" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :email, class:"text" %><br />
-    <%= f.email_field :email, class: "form-control input-lg" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :password, class:"text" %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off", class: "form-control input-lg" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation, class:"text" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :current_password, class:"text" %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off", class: "form-control input-lg" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update", class: "btn btn-success" %>
-  </div>
-
-  <hr>
-
-  <%= gravatar_tag current_user.email, size: 100 %>
-  <%= link_to 'change avatar', 'http://en.gravatar.com' %>
-
-  <% end %>
-
-  <h3>Cancel my account</h3>
-
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <%= link_to "Back", :back %>
 </div>
