--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <%= gravatar_tag current_user.email, size: 20 %>&nbsp;
+              <%= gravatar_tag current_user.email, size: 25, :html => { :class => "myavatar-icon" }%>&nbsp;
               <%= current_user.full_name %> <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
